fix(p6-tabs): tabs can wrap onto multiples lines
Closes #9

--- a/packages/core/src/components/molecules/p6-tabs/p6-tabs.scss
+++ b/packages/core/src/components/molecules/p6-tabs/p6-tabs.scss
@@ -140,7 +140,8 @@ $tabs-toggle-link-active-color: $link-invert !default;
       border-bottom-width: $tabs-border-bottom-width;
       display: flex;
       flex-grow: 1;
-      flex-shrink: 0;
+      // flex-shrink: 0;
+      flex-wrap: wrap;
       justify-content: flex-start;
       margin: 0;
       padding: 0;
